samples/_failures_safe/1761508790_1b2ad6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e372220.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2e372220.c:169:9: error: expected declaration or statement at end of input
  169 |         }
      |         ^
./samples/SAFE/__tmp_2e372220.c:169:9: error: expected declaration or statement at end of input
